# project-protostar-fastapi

./: .gitignore  Jenkinsfile  README.md  docker-compose.yml  error.md  init.env  jenkinsfile  jenkinsfile.cleanup_old
app/: Dockerfile  ai-circuit.guard.ts  app.module.ts  chat.controller.ts  docker-compose.yml  dockerfile  main.py  monitoring.module.ts  pyproject.toml
app/core/: ai.py  config.py  database.py  minio_client.py  models.py  rag_service.py  redis.py  services.py  silence_health_checker.py  vectorized_doc.py  worker.py  worker_knowledge.py  worker_summary.py
app/prompts/system/: system.md
app/prompts/user_data/: hansol_ryu-portfolio.md  hansol_ryu-resume.md
k8s/base/: configmap.yaml  deployment.yaml  kustomization.yaml  service.yaml
k8s/overlays/dev/: configmap.yaml  kustomization.yaml
k8s/overlays/prod/: configmap.yaml  kustomization.yaml
