[project]
name = "protostar-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.122.0",
    "httpx>=0.28.1",
    "langchain-text-splitters>=1.1.0",
    "minio>=7.2.20",
    "openai>=2.14.0",
    "pgvector>=0.4.2",
    "psutil>=7.2.1",
    "pydantic-settings>=2.12.0",
    "pypdf>=6.6.0",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.45",
    "tiktoken>=0.12.0",
    "uvicorn[standard]>=0.38.0",
]
